# oos

./: Cargo.toml  build.rs  buildSSD.sh
protos/: hello.proto  readme.md
src/: client.rs  logging_config.yaml  main.rs  server.rs
src/distributed_ledger/: BlockSelection.rs  NodeSelection.rs
src/grpc/: hello.rs  mod.rs
src/p2pkademlia/: mod.rs
tests/: integration_tests.rs
