[package]
name = "G1P2P"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1.21"
rand = "0.8.5"
protobuf = "2"
httpbis = { git = "https://github.com/stepancheg/rust-http2"}
grpc = "*"
grpc-protobuf="*"
tonic = "0.9.2"
prost = "0.11.9"
# adicionei manualmente as features para poder usar o #[tokio::main] (which is the same as #[tokio::main(flavor = "multi_thread")]
tokio = { version = "1.28.0", features = ["rt-multi-thread", "macros"] }


#log to file
log = "0.4.17"
simplelog = { version = "0.12.1", features = ["paris"] }
h160 = "0.1.0"
hex-literal = "0.4.1"
sha1 = "0.10.5"
queues = "1.1.0"

[[bin]]
name="server"
path= "src/server.rs"

[[bin]]
name="client"
path= "src/client.rs"


[build-dependencies]
tonic-build = "0.9.2"


